# cur

./: .gitignore  README.md  aud.py  brl.py  build.bat  cad.py  chf.py  cu.bat  cu.py  cur.bat  cur.py  cur.spec  gbp.py  make.bat  pyproject.toml
cur/: aud.py  brl.py  cad.py  chf.py  cur.py  eur.py  gbp.py  hkd.py  jpy.py  nzd.py  usd.py
tests/: test_brl.py  test_eur.py  test_gbp.py  test_jpy.py  test_usd.py
