[tool.poetry]
name = "cur"
version = "0.1.0"
description = "Aplicativo CLI para conversão de moedas"
authors = ["Valmir França <vfranca3@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"

[tool.poetry.scripts]
cur = "cur.cur:cur"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-env = "^1.1.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
